<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">891433527605369</string>

    <string name="app_name">CarpoolTH</string>
    <string name="action_settings">Settings</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="str_atv_places">Enter Place Here</string>
    <string name="requestBT">Request</string>
    <string name="AnimateBT">Animate</string>
    <string name="TextView">0 / 0</string>

    <string name="rider">RIDER\?</string>
    <string name="driver">DRIVER\?</string>


    <string name="term_policy">By signing up, I agree to CarpoolTH\'s Terms and Policy</string>
    <string name="term"><u>Terms</u></string>
    <string name="term_head">TERMS OF SERVICE</string>
    <string name="term_01_head">Terms of service</string>
    <string name="term_01_content">Please review this Agreement carefully and check for updates regularly. This Agreement limits
            our liability and also limits your remedies against us and certain third parties. You should
            read these Service Terms of Use in conjunction with the CarpoolTH Service Privacy Policy</string>
    <string name="term_02_head">CarpoolTH Service Terms of Use</string>
    <string name="term_02_content">These Terms of Use (\"Terms of use\" or \"Agreement\") apply to use of the CarpoolTH carpooling
            service (\"CarpoolTH Service\") and the CarpoolTH software used to provide the service (\"CarpoolTH Software\"). This
            Agreement is a legally binding agreement made between you (\"you\",\"your\"). This Agreement applies to your use of
            CarpoolTH Service regardless of the method through which it is accessed.</string>


    <string name="policy"><u>Policy</u></string>


</resources>
